trunk/Archive2/c9/102112f08abbfd/output
main.cpp:36:32: error: reinterpret_cast from 'void *' to 'decltype(dl)' (aka 'std::unique_ptr<<lambda at main.cpp:28:18>, std::default_delete<<lambda at main.cpp:28:18> > >') is not allowed
                auto const p = reinterpret_cast<decltype(dl)>(rp);
                               ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
main.cpp:69:12: note: in instantiation of function template specialization 'thread::thread<void (&)(int, char), int, char>' requested here
    thread t(test, 6, 'a');
           ^
1 error generated.
